python-defaults (2.6.5-2) UNRELEASED; urgency=low

  [ Piotr Ożarowski ]
  * dh_python2: Create extension symlinks in /usr/lib/pyshared/pythonX.Y
  * debian/copyright: Add a note about dh_python2, pycompile, pyclean and
    debpython module in

 -- Matthias Klose <doko@debian.org>  Tue, 18 May 2010 12:28:25 +0200

python-defaults (2.6.5-1) experimental; urgency=low

  [ Matthias Klose ]
  * Bump version to 2.6.5.
  * Make python2.6 the default Python version.
  * Build a python-doc package.
  * python: Update the valgrind file to 2.6.

  [ Piotr Ozarowski ]
  * python-minimal: Install pycompile and pyclean binaries.
  * Add lsb-release to Build-Depends
  * Add dh_python2 stuff

 -- Matthias Klose <doko@debian.org>  Fri, 14 May 2010 18:50:21 +0200

python-defaults (2.5.4-9) unstable; urgency=low

  * python-all-dev: Fix typo in dependency list. Closes: #566278.

 -- Matthias Klose <doko@debian.org>  Fri, 22 Jan 2010 18:38:31 +0100

python-defaults (2.5.4-6) unstable; urgency=low

  * Add python2.6 as a supported Python version.
  * python-all{,-dev,-dbg}: Depend on the 2.6 packages.
  * Run the rtinstall script, when 2.5 became a supported version (2.4.4-3)
    and python2.5 is installed.
  * Run the rtinstall script, when 2.6 became a supported version (2.5.4-6)
    and python2.6 is installed. Closes: #565952.
  * Fix reference to list of modules in the python-minimal package.
    Closes: #558403.

 -- Matthias Klose <doko@debian.org>  Sun, 17 Jan 2010 01:38:21 +0100

python-defaults (2.5.4-5) unstable; urgency=low

  * Fix typos from policy update (Closes: #561091, #561093)
  * Drop python2.4 as a supported Python
    - Remove python2.4 depends and update descriptions for python-all,
      python-all-dev, and python-all-dbg
    - Drop python2.4 from supported versions and add to old and unsupported
      versions
    - Update pyversions.py to drop python2.4 from the supported list
  * Correct path to Konsole Python desktop file (Closes: #381659)
