@@ -5,7 +5,11 @@ python-defaults (2.6.5-2) UNRELEASED; urgency=low
   * debian/copyright: Add a note about dh_python2, pycompile, pyclean and
     debpython module in
 
- -- Matthias Klose <doko@debian.org>  Tue, 18 May 2010 12:28:25 +0200
+  [ Scott Kitterman ]
+  * debian/pyversions.py: Exclude python3 versions from results - those are
+    handled by py3versions in python3-defaults
+
+ -- Matthias Klose <doko@debian.org>  Tue, 18 May 2010 12:28:25 +0200  Sat, 05 Jun 2010 18:59:57 -0400
 
 python-defaults (2.6.5-1) experimental; urgency=low
 
